# sentiment-survey-2

./: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: build.yml
sentimentsurvey/: asgi.py  settings.py  urls.py  wsgi.py
survey/: admin.py  models.py  questions.py  urls.py  views.py
survey/migrations/: 0001_initial.py  0002_importanceanswer_remove_sentimentanswer_importance.py
templates/: base.html  end.html  importance.html  question.html
