[project]
name = "sentiment-survey-2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Milos Svana", email = "milos.svana@gmail.com" }
]
dependencies = [
    "django>=5.0.4",
    "gunicorn>=22.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "autopep8>=2.1.0",
]
